force-app/main/default/objects/Opportunity/fields/Recu_ERP_Devis__c.field-meta.xml
<CustomField>
    <fullName>Recu_ERP_Devis__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Champ qui sera rempli par le web service EMLYON pour définir les opportunités Intra (devis)  à envoyer vers à AGRESSO</description>
    <label>Recu ERP Devis</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>