force-app/main/default/objects/Opportunity/fields/Remise_interentreprise__c.field-meta.xml
<CustomField>
    <fullName>Remise_interentreprise__c</fullName>
    <formula>Account.Remise_interentreprise__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remise interentreprise</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>