force-app/main/default/objects/Opportunity/fields/Remplissage_Dossier_CANEL__c.field-meta.xml
<CustomField>
    <fullName>Remplissage_Dossier_CANEL__c</fullName>
    <label>Remplissage Dossier CANEL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>