force-app/main/default/objects/Opportunity/fields/ReseauPaysContact__c.field-meta.xml
<CustomField>
    <fullName>ReseauPaysContact__c</fullName>
    <description>Ce champ permet de ramener l&apos;information du reseau du pays du contact.
Ce champ technique est utilisé par l&apos;interface pour définir le catalogue de prix à utiliser.</description>
    <formula>TEXT(Contact_central__r.Pays__r.Reseau__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ReseauPaysContact</label>
    <type>Text</type>
</CustomField>