force-app/main/default/objects/Opportunity/fields/Responsable_pedagogique_del__c.field-meta.xml
<CustomField>
    <fullName>Responsable_pedagogique_del__c</fullName>
    <description>Définit l’intervenant</description>
    <label>Responsable pédagogique</label>
    <type>TextArea</type>
</CustomField>