force-app/main/default/objects/Opportunity/fields/Responsable_plan_de_formation__c.field-meta.xml
<CustomField>
    <fullName>Responsable_plan_de_formation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Coché si le contact est  la personne responsabe du plan de formation</description>
    <label>Responsable plan de formation</label>
    <type>Checkbox</type>
</CustomField>