force-app/main/default/objects/Opportunity/fields/Secteur_activit_compte__c.field-meta.xml
<CustomField>
    <fullName>Secteur_activit_compte__c</fullName>
    <description>Il s’agit du secteur d’activité du compte lié à l’opportunité</description>
    <formula>TEXT(  Account.Industry  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Secteur d’activité compte</label>
    <type>Text</type>
</CustomField>