force-app/main/default/objects/Opportunity/fields/Sens_de_prise_de_contact__c.field-meta.xml
<CustomField>
    <fullName>Sens_de_prise_de_contact__c</fullName>
    <label>Sens de prise de contact</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Partenaire ==&gt; EMLYON</fullName>
            </value>
            <value>
                <fullName>EMLYON ==&gt; Partenaire</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>