force-app/main/default/objects/Opportunity/fields/Site_d_enseignement__c.field-meta.xml
<CustomField>
    <fullName>Site_d_enseignement__c</fullName>
    <label>Site d&apos;enseignement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ecully</fullName>
            </value>
            <value>
                <fullName>Paris</fullName>
            </value>
            <value>
                <fullName>Résidentiel</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
            <value>
                <fullName>OPP-SE10</fullName>
            </value>
            <value>
                <fullName>OPP-SE20</fullName>
            </value>
            <value>
                <fullName>OPP-SE30</fullName>
            </value>
            <value>
                <fullName>OPP-SE40</fullName>
            </value>
            <value>
                <fullName>Shanghai</fullName>
            </value>
            <value>
                <fullName>Casablanca</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>