force-app/main/default/objects/Opportunity/fields/Somme_Montant_Ech_ancier__c.field-meta.xml
<CustomField>
    <fullName>Somme_Montant_Ech_ancier__c</fullName>
    <label>Somme Montant Echéancier</label>
    <summarizedField>Echeancier__c.Montant_previsionnel__c</summarizedField>
    <summaryForeignKey>Echeancier__c.Opportunite__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>