force-app/main/default/objects/Opportunity/fields/Souhaite_rester_confidentiel__c.field-meta.xml
<CustomField>
    <fullName>Souhaite_rester_confidentiel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Souhaite rester confidentiel</label>
    <type>Checkbox</type>
</CustomField>