force-app/main/default/objects/Opportunity/fields/Souhaite_tre_contact__c.field-meta.xml
<CustomField>
    <fullName>Souhaite_tre_contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Souhaite être contacté</label>
    <type>Checkbox</type>
</CustomField>