force-app/main/default/objects/Opportunity/fields/Sous_provenance__c.field-meta.xml
<CustomField>
    <fullName>Sous_provenance__c</fullName>
    <inlineHelpText>précise un sous canal de la fiche piste dans le système</inlineHelpText>
    <label>Détail canal d&apos;acquisition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>