force-app/main/default/objects/Opportunity/fields/Statut_Canel__c.field-meta.xml
<CustomField>
    <fullName>Statut_Canel__c</fullName>
    <label>Statut Candidature CANEL</label>
    <length>50</length>
    <type>Text</type>
</CustomField>