force-app/main/default/objects/Opportunity/fields/Statut_Com_d_j_modifi_par_CANEL__c.field-meta.xml
<CustomField>
    <fullName>Statut_Com_d_j_modifi_par_CANEL__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Le champ Statut Commercial a-t-il déjà été modifié par la valeur du champ Statut Candidature CANEL ? Si oui, ne pas le remodifier</description>
    <label>Statut Com. déjà modifié par CANEL ?</label>
    <type>Checkbox</type>
</CustomField>