force-app/main/default/objects/Opportunity/fields/Statut_Dossier_CANEL__c.field-meta.xml
<CustomField>
    <fullName>Statut_Dossier_CANEL__c</fullName>
    <label>Statut Dossier CANEL</label>
    <length>50</length>
    <type>Text</type>
</CustomField>