force-app/main/default/objects/Opportunity/fields/TECH_Code_du_produit__c.field-meta.xml
<CustomField>
    <fullName>TECH_Code_du_produit__c</fullName>
    <label>TECH Code du produit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>