force-app/main/default/objects/Opportunity/fields/TECH_Date_de_creation__c.field-meta.xml
<CustomField>
    <fullName>TECH_Date_de_creation__c</fullName>
    <formula>DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH Date de création</label>
    <type>Date</type>
</CustomField>