force-app/main/default/objects/Opportunity/fields/TECH_Famille__c.field-meta.xml
<CustomField>
    <fullName>TECH_Famille__c</fullName>
    <label>TECH Famille</label>
    <length>255</length>
    <type>Text</type>
</CustomField>