force-app/main/default/objects/Opportunity/fields/TECH_Gamme__c.field-meta.xml
<CustomField>
    <fullName>TECH_Gamme__c</fullName>
    <label>TECH Gamme</label>
    <length>255</length>
    <type>Text</type>
</CustomField>