force-app/main/default/objects/Opportunity/fields/total_categorie_A__c.field-meta.xml
<CustomField>
    <fullName>total_categorie_A__c</fullName>
    <label>Dont Catégorie A</label>
    <summarizedField>OpportunityLineItem.UnitPrice</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Id_entree_de_catalogue__c</field>
        <operation>equals</operation>
        <value>01uw000000mpmFtAAI</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>