force-app/main/default/objects/Opportunity/fields/Total_Categorie_B__c.field-meta.xml
<CustomField>
    <fullName>Total_Categorie_B__c</fullName>
    <label>Dont Catégorie B</label>
    <summarizedField>OpportunityLineItem.UnitPrice</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Id_entree_de_catalogue__c</field>
        <operation>equals</operation>
        <value>01uw000000mpmG3AAI</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>