force-app/main/default/objects/Opportunity/fields/Type_compte__c.field-meta.xml
<CustomField>
    <fullName>Type_compte__c</fullName>
    <description>Il s’agit du type d’établissement du compte lié l’opportunité</description>
    <formula>TEXT( Account.Type_d_tablissement__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type de compte</label>
    <type>Text</type>
</CustomField>