force-app/main/default/objects/Opportunity/fields/type_de_formation__c.field-meta.xml
<CustomField>
    <fullName>type_de_formation__c</fullName>
    <label>Type de formation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OPP-TF10</fullName>
            </value>
            <value>
                <fullName>OPP-TF20</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>