force-app/main/default/objects/Opportunity/fields/Vehicule__c.field-meta.xml
<CustomField>
    <fullName>Vehicule__c</fullName>
    <label>Véhicule</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AESCRA</fullName>
            </value>
            <value>
                <fullName>Fondation de France</fullName>
            </value>
            <value>
                <fullName>Fond de dotation Alliance</fullName>
            </value>
            <value>
                <fullName>Friends of Allyage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>