force-app/main/default/objects/Opportunity/fields/Votre_formation__c.field-meta.xml
<CustomField>
    <fullName>Votre_formation__c</fullName>
    <description>Nom de session de formation -rempli par WF</description>
    <label>Votre formation</label>
    <length>100</length>
    <type>Text</type>
</CustomField>