force-app/main/default/objects/Opportunity/fields/x18caracteres_Contact__c.field-meta.xml
<CustomField>
    <fullName>x18caracteres_Contact__c</fullName>
    <description>Id Salesforce sur 18 caractères du contact</description>
    <formula>CASESAFEID(Contact_central__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>x18caracteres_Contact</label>
    <type>Text</type>
</CustomField>