force-app/main/default/objects/Opportunity/recordTypes/Formation_courte.recordType-meta.xml
<RecordType>
    <fullName>Formation_courte</fullName>
    <active>true</active>
    <businessProcess>Formation continue courte</businessProcess>
    <description>Concerne le processus de la formation continue courte</description>
    <label>Formation courte</label>
</RecordType>