force-app/main/default/objects/Opportunity/recordTypes/Formation_initiale.recordType-meta.xml
<RecordType>
    <fullName>Formation_initiale</fullName>
    <active>true</active>
    <businessProcess>Formation initiale</businessProcess>
    <label>Formation initiale</label>
</RecordType>