force-app/main/default/objects/Opportunity/recordTypes/Fundraising_B2C.recordType-meta.xml
<RecordType>
    <fullName>Fundraising_B2C</fullName>
    <active>true</active>
    <businessProcess>Fundraising</businessProcess>
    <label>Fundraising B2C</label>
</RecordType>