force-app/main/default/objects/Opportunity/recordTypes/Intra_entreprise.recordType-meta.xml
<RecordType>
    <fullName>Intra_entreprise</fullName>
    <active>true</active>
    <businessProcess>Intra</businessProcess>
    <description>Regroupe le Sur-Mesure et l&apos;intra &quot;Standard&quot;</description>
    <label>Formation intra-entreprise</label>
</RecordType>