force-app/main/default/objects/Opportunity/recordTypes/Partenariat_Fundraising.recordType-meta.xml
<RecordType>
    <fullName>Partenariat_Fundraising</fullName>
    <active>true</active>
    <businessProcess>Fundraising B2B</businessProcess>
    <label>Partenariat Fundraising</label>
</RecordType>