force-app/main/default/objects/Opportunity/recordTypes/Programme_Long_Dipl_mant.recordType-meta.xml
<RecordType>
    <fullName>Programme_Long_Dipl_mant</fullName>
    <active>true</active>
    <businessProcess>Programme  Long Diplômant</businessProcess>
    <description>Formation continue longue</description>
    <label>Programme Long Diplômant</label>
</RecordType>