force-app/main/default/objects/Opportunity/recordTypes/Relations_Employeur.recordType-meta.xml
<RecordType>
    <fullName>Relations_Employeur</fullName>
    <active>true</active>
    <businessProcess>Relations Employeur</businessProcess>
    <description>Relations Employeur</description>
    <label>Relations Employeur</label>
</RecordType>