force-app/main/default/objects/Opportunity/recordTypes/Sur_Mesure.recordType-meta.xml
<RecordType>
    <fullName>Sur_Mesure</fullName>
    <active>true</active>
    <businessProcess>Intra</businessProcess>
    <description>Test Création Piste Sur mesure</description>
    <label>Sur Mesure</label>
</RecordType>