force-app/main/default/objects/Opportunity/recordTypes/Taxe.recordType-meta.xml
<RecordType>
    <fullName>Taxe</fullName>
    <active>true</active>
    <businessProcess>Taxe</businessProcess>
    <description>Taxe d&apos;apprentissage</description>
    <label>Taxe</label>
</RecordType>