force-app/main/default/objects/Opportunity/validationRules/EML_statut_et_produit.validationRule-meta.xml
<ValidationRule>
    <fullName>EML_statut_et_produit</fullName>
    <active>true</active>
    <description>Le produit doit être renseigné afin de faire évoluer le statut commercial de l&apos;opportunité</description>
    <errorConditionFormula>! $User.ByPass_RV__c 
&amp;&amp; 
( 
AND(
OR( 
RecordType.Name = &quot;Formation intra-entreprise&quot;,
RecordType.Name = &quot;Programme Long Diplômant&quot;,
RecordType.Name = &quot;Formation courte&quot;),
ISCHANGED(StageName),
 Nombre_de_produits__c = 0
) 
)</errorConditionFormula>
    <errorMessage>Le produit doit être renseigné afin de faire évoluer le statut commercial de l&apos;opportunité</errorMessage>
</ValidationRule>