force-app/main/default/objects/Opportunity/validationRules/RG_OPP_ExReport.validationRule-meta.xml
<ValidationRule>
    <fullName>RG_OPP_ExReport</fullName>
    <active>true</active>
    <description>Un exercice de report doit être obligatoirement choisi quand le statut commercial :&quot;Prospect Report&quot; est sélectionné</description>
    <errorConditionFormula>ISPICKVAL(StageName, &apos;Prospect report&apos;)  &amp;&amp;  ISPICKVAL( Exercice_de_report__c , &apos;&apos;)  &amp;&amp; ( OR( RecordType.DeveloperName  = &apos;Programme_Long_Dipl_mant&apos;,  RecordType.DeveloperName = &apos;Formation_courte&apos;,   BEGINS(InterfaceExternalId__c, &apos;IMBA&apos; )  ) )</errorConditionFormula>
    <errorDisplayField>Exercice_de_report__c</errorDisplayField>
    <errorMessage>Veuillez Sélectionner un exercice de report</errorMessage>
</ValidationRule>