force-app/main/default/objects/Opportunity/validationRules/RG_OPPO_01_IHM_004.validationRule-meta.xml
<ValidationRule>
    <fullName>RG_OPPO_01_IHM_004</fullName>
    <active>true</active>
    <description>« Motif de fermeture » est obligatoire pour le passage du statut «Clos (Perdu)»</description>
    <errorConditionFormula>! $User.ByPass_RV__c 
&amp;&amp; 
( 
and(
 ISPICKVAL(StageName,&quot;Clos (Perdu)&quot;), 
 ISPICKVAL(Motif_de_fermeture__c,&quot;&quot;)
)
)</errorConditionFormula>
    <errorDisplayField>Motif_de_fermeture__c</errorDisplayField>
    <errorMessage>Remplir un motif de fermeture</errorMessage>
</ValidationRule>