force-app/main/default/objects/Opportunity/validationRules/RG_Opportunite01_NomCompte.validationRule-meta.xml
<ValidationRule>
    <fullName>RG_Opportunite01_NomCompte</fullName>
    <active>false</active>
    <description>Permet de vérifier que le compte associé soit le même que le compte du contact associé.</description>
    <errorConditionFormula>! $User.ByPass_RV__c 
&amp;&amp; 
NOT(  ISNEW()  )
&amp;&amp;
( 
Account.Id    &lt;&gt;    Contact_central__r.Account.Id
)</errorConditionFormula>
    <errorMessage>Le compte associé à l&apos;opportunité est différent du compte du contact associé.</errorMessage>
</ValidationRule>