force-app/main/default/objects/Opportunity/validationRules/Statut_offre_envoyee.validationRule-meta.xml
<ValidationRule>
    <fullName>Statut_offre_envoyee</fullName>
    <active>true</active>
    <description>Pour passer au statut « offre envoyée », le statut doit être « offre validée »</description>
    <errorConditionFormula>! $User.ByPass_RV__c 
&amp;&amp; 
( 
AND( 
RecordType.Name = &quot;Formation intra-entreprise&quot;, 
NOT ISPICKVAL(PRIORVALUE(StageName), &quot;Offre validée&quot;) ,
ISPICKVAL(StageName, &quot;Offre envoyée&quot;)
) 
)</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>Pour passer au statut « offre envoyée », le statut doit être « offre validée »</errorMessage>
</ValidationRule>