force-app/main/default/objects/Opportunity/validationRules/Statut_offre_validee_sans_marge.validationRule-meta.xml
<ValidationRule>
    <fullName>Statut_offre_validee_sans_marge</fullName>
    <active>true</active>
    <description>Pour passer au statut « offre validée », une marge prévisionnelle doit être inscrite</description>
    <errorConditionFormula>! $User.ByPass_RV__c 
&amp;&amp; 
( 
AND( 
RecordType.Name = &quot;Formation intra-entreprise&quot;, 
ISBLANK( Marge_Previsionnelle__c ),
ISPICKVAL(StageName, &quot;Offre validée&quot;)
) 
)</errorConditionFormula>
    <errorMessage>Pour passer au statut « offre validée », une marge prévisionnelle doit être inscrite</errorMessage>
</ValidationRule>