force-app/main/default/objects/Opportunity/validationRules/Taxe_Montant.validationRule-meta.xml
<ValidationRule>
    <fullName>Taxe_Montant</fullName>
    <active>true</active>
    <description>Seuls un admin et les utilisateurs profil MANAGER TAXE peuvent modifier le montant.</description>
    <errorConditionFormula>! $User.ByPass_RV__c 
&amp;&amp; 
( 
AND(
NOT(OR($Profile.Name = &quot;Administrateur système&quot;,
$Profile.Name = &quot;Administrateur Direction Entreprise&quot;,
 $Profile.Name = &quot;MANAGER TAXE&quot; )),
 RecordType.Name = &quot;Taxe&quot;,
OR(
ISCHANGED( Amount )  ,
AND( ISNEW(),
Amount &gt; 0 )
)
)
)</errorConditionFormula>
    <errorMessage>Seuls un admin et les utilisateurs profil MANAGER TAXE peuvent modifier le montant.</errorMessage>
</ValidationRule>