force-app/main/default/objects/Opportunity/validationRules/Taxe_StatutConclu.validationRule-meta.xml
<ValidationRule>
    <fullName>Taxe_StatutConclu</fullName>
    <active>true</active>
    <description>Seuls un admin et les utilisateurs profil MANAGER TAXE peuvent passer l&apos;opportunité à Conclu.</description>
    <errorConditionFormula>! $User.ByPass_RV__c 
&amp;&amp; 
( 
AND(
NOT(OR($Profile.Name = &quot;Administrateur système&quot;, 
$Profile.Name = &quot;Administrateur Direction Entreprise&quot;,
$Profile.Name = &quot;MANAGER TAXE&quot; )),
 RecordType.Name = &quot;Taxe&quot;,
ISPICKVAL( StageName , &quot;Conclu&quot;) 
)
)</errorConditionFormula>
    <errorMessage>Seuls un admin et les utilisateurs profil MANAGER TAXE peuvent passer l&apos;opportunité à Conclu.</errorMessage>
</ValidationRule>