force-app/main/default/objects/Opportunity/validationRules/Total_echeancier_versus_montant.validationRule-meta.xml
<ValidationRule>
    <fullName>Total_echeancier_versus_montant</fullName>
    <active>true</active>
    <description>Le montant échéancier ne peut pas être supérieur au montant de l&apos;opportunité</description>
    <errorConditionFormula>! $User.ByPass_RV__c 
&amp;&amp; 
( 
AND(
RecordType.Name = &quot;Formation intra-entreprise&quot;,
Somme_Montant_Ech_ancier__c &gt; Amount
)
)</errorConditionFormula>
    <errorMessage>Le total des échéanciers est supérieur au montant de l&apos;opportunité</errorMessage>
</ValidationRule>