force-app/main/default/objects/Opportunity/validationRules/Un_seul_produit_par_opportunite.validationRule-meta.xml
<ValidationRule>
    <fullName>Un_seul_produit_par_opportunite</fullName>
    <active>true</active>
    <description>Impossibilité de sélectionner plus d&apos;un produit par opportunité</description>
    <errorConditionFormula>RecordType.Name =  &quot;Relations Employeur&quot;  &amp;&amp;   Nombre_de_produits__c &gt;= 2</errorConditionFormula>
    <errorMessage>Impossibilité de sélectionner plus d&apos;un produit par opportunité, veuillez créer une nouvelle opportunité.</errorMessage>
</ValidationRule>