force-app/main/default/objects/Opportunity/listViews/ACC_Digital_Booster.listView-meta.xml
<ListView>
    <fullName>ACC_Digital_Booster</fullName>
    <columns>Nom_Prenom__c</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Code_Produit__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ExerciceNum_ro__c</field>
        <operation>equals</operation>
        <value>2022</value>
    </filters>
    <filters>
        <field>Code_Produit__c</field>
        <operation>equals</operation>
        <value>DB</value>
    </filters>
    <label>ACC_Digital Booster</label>
</ListView>