force-app/main/default/objects/Opportunity/listViews/ACC_ED_JOB_TECH.listView-meta.xml
<ListView>
    <fullName>ACC_ED_JOB_TECH</fullName>
    <columns>Nom_Prenom__c</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ExerciceNum_ro__c</field>
        <operation>equals</operation>
        <value>2022</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.NAME</field>
        <operation>contains</operation>
        <value>EDJOBTECH</value>
    </filters>
    <label>ACC_ED JOB TECH</label>
</ListView>